--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,18 +1,20 @@
 .home-main {
 
     display: grid;
-    row-gap: 10px;
+    row-gap: 15px;
     place-items: center;
+
     h1{
          padding: 0;
          margin: 0;
     }
-
     button {
         border: none;
         height: 50px;
         width: 100px;
         cursor: pointer;
         border-radius: 50px;
+        background: gray ;
+        color: white;
     }
 }
